# made-cpp-2022-hw

./: README.md
.github/workflows/: hw01.yml  hw02.yml  hw04.yml
hw01/: CMakeLists.txt  Dockerfile  main.c
hw01/scripts/: build.sh  build_image.sh  generate_tests_cov_report.sh  run_linters.sh  run_tests.sh
hw01/tag/: CMakeLists.txt  tag.c  tag.h
hw01/tests/: CMakeLists.txt  unit_test_tag.cpp
hw02/: .gitignore  CMakeLists.txt  Dockerfile
hw02/matrix/: matrix.h  matrix.hpp  vector.h  vector.hpp
hw02/scripts/: build_image.sh  run_tests.sh
hw02/tests/: CMakeLists.txt  integration_test_matrix.cc  unit_test_matrix.cc  unit_test_vector.cc
hw04/: .gitignore  CMakeLists.txt  Dockerfile  report.txt
hw04/analyser/: CMakeLists.txt  analyser.hpp  config.h.in  counter.cpp  parallel_analyser.cpp  sequential_analyser.cpp  utils.cpp  utils.hpp
hw04/scripts/: build.sh  build_image.sh  run_tests.sh
hw04/tests/: CMakeLists.txt  tests.cpp
